test/files/neg/plugin-before-parser/lib/plugins.jar.desired.sha1
ba4054acd8b27665867d6304a881f61a2b51465a ?plugins.jar
